Added a lot of notes to the GameLogic class. A king will always return 0 kills.